# suthing

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build-docs.yml  pre-commit.yml  pytest.yml  python-publish.yml
contributing/: index.html
docs/: contributing.md  examples.md  gen_pages.py  index.md
docs/getting_started/: installation.md  quickstart.md
docs/reference/: connection.md  core.md  index.md
docs/source/: conf.py  index.rst  modules.rst  suthing.config.rst  suthing.connection.rst  suthing.rst
examples/: index.html
getting_started/installation/: index.html
getting_started/quickstart/: index.html
reference/: index.html
reference/connection/: index.html
reference/core/: index.html
search/: search_index.json
suthing/: __init__.py  compare.py  config.py  decorate.py  file_handle.py  timer.py
suthing/config/: factory.py  onto.py
suthing/connection/: config_mapping.py  factory.py  onto.py
test/: conftest.py  test_decorate.py  test_factory.py  test_file_handle.py  test_profile.py  test_timer.py
test/data/: example.csv  example.env  example.jsonld
