[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "pre-commit>=3.3.3,<4",
  "pytest>=8.3.3,<9",
  "setuptools>=80.1.0"
]
docs = [
  "mkdocs-material",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.29.1"
]

[project]
authors = [{email = "abelikov@gmail.com", name = "Alexander Belikov"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python"
]
dependencies = [
  "dataclass-wizard>=0.34.0,<0.35",
  "pandas>=2.0.3,<3",
  "python-dotenv>=1.0.0,<2",
  "pyyaml>=3.10"
]
description = "Small Useful Things : python package for convenient primitives"
keywords = [
  "suthing",
  "tools"
]
license = "MIT"
name = "suthing"
readme = "README.md"
requires-python = "~=3.10"
version = "0.4.1"

[project.urls]
Homepage = "https://github.com/growgraph/suthing"

[tool.mypy]
ignore_missing_imports = true
