[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "pre-commit>=3.3.3,<4",
  "pytest>=8.3.3,<9",
  "setuptools>=80.1.0",
  "ty>=0.0.1a25"
]
docs = [
  "mkdocs-material",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.29.1"
]

[project]
authors = [{email = "alexander@growgraph.dev", name = "Alexander Belikov"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "dataclass-wizard>=0.33.1",
  "mkdocs-gen-files>=0.5.0",
  "pandas>=2.3.3",
  "python-dotenv>=1.0.0,<2",
  "pyyaml>=3.10",
  "strenum>=0.4.15"
]
description = "Small Useful Things : python package for convenient primitives"
keywords = [
  "suthing",
  "tools"
]
license = "MIT"
name = "suthing"
readme = "README.md"
requires-python = ">=3.11"
version = "0.5.1"

[project.urls]
Homepage = "https://github.com/growgraph/suthing"

[tool.hatch.build.targets.sdist]
include = ["suthing"]

[tool.hatch.build.targets.wheel]
include = ["suthing"]

[tool.mypy]
ignore_missing_imports = true
